--- a/map.html
+++ b/map.html
@@ -19,29 +19,6 @@
 </body>
 
 <script>
-<<<<<<< HEAD
-//Initializing the SVG
-var width = 960,
-    height = 1160;
-
-var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
-
-//Loading the json map
-d3.json("maps/nigeria.json", function(error, nigeria) {
-  if (error) return console.error(error);
-  console.log(nigeria.objects.test.geometries)
-  svg.selectAll('.states')
-  	.data(topojson.feature(nigeria, nigeria.objects.test).features)
-  	.enter().append("path")
-  	.attr('d', path)
-  	.style("fill", function(d, i) { 
-        	return 'rgb(200,200,200)';
-        });
-
-});
-=======
 /*Declaring Constants*/
 var mapContainerSize = {'height':800,'width':800};
 var mapSize = {'height':800,'width':800};
@@ -68,27 +45,95 @@ var projection = d3.geo.mercator()
 var path = d3.geo.path()
 			.projection(projection);
 
-/*Inputing Data and drawing the map on the canvas using the defined path variable*/
-d3.json("/maps/nigeria.json", function(error, nigeria){
-	map.selectAll('.states')
-		.data(topojson.feature(nigeria, nigeria.objects.test).features)
-		.enter()
-		.append('path')
-		.attr({
-			d: path,
-			'class': 'states'
-		})
-		.style('fill', function(d, i){
-			return "rgb(200, " + i * 20 + ", 200)"
-		});
-		console.log(topojson.feature(nigeria, nigeria.objects.test).features)
-		console.log(topojson.feature(nigeria, nigeria.objects.test.properties))
+
+var color = d3.scale.threshold()
+			.range(['rgb(189,0,38)','rgb(240,59,32)','rgb(253,141,60)','rgb(254,178,76)','rgb(254,217,118)']);
+
+
+
+/* Loading data for the map */
+d3.csv("/data/dataSum.csv", function(data){
+	//setting the color domain based on the data
+	color.domain([
+		d3.min(data, function(d) { return d.price; }),
+		d3.max(data, function(d) { return d.price; })])
+
+	//loading map data
+	d3.json("/maps/nigeria.json", function(error, nigeria){
+		//creating a variable to call features collection
+		var stateFeatures = topojson.feature(nigeria, nigeria.objects.test).features
+
+		//merging the two datasets
+		for(var i = 0; i < data.length; i++){
+			//pulling the states from csv file
+			var dataState = data[i].state;
+			//pulling corresponding price values and converting to number from string
+			var dataValue = parseFloat(data[i].price)
+
+			//adding the price value to the map properties
+			for(var j = 0; j < stateFeatures.length; j++){
+				var jsonState = stateFeatures[j].properties.NAME_1;
+				if(dataState == jsonState){
+					stateFeatures[j].properties.price = dataValue
+					break;
+				}
+			}
+		}
+
+		map.selectAll('.states')
+			.data(topojson.feature(nigeria, nigeria.objects.test).features)
+			.enter()
+			.append('path')
+			.attr({
+				d: path,
+				'class': 'states'
+			})
+			.style('fill', function(d, i){
+				var value = d.properties.price;
+				if(value) {
+					return color(value);
+				} else {
+					 return "#ccc";
+				}
+			});
+	})
 })
 
+/*
+var dataLookup = d3.csv("/data/dataSum.csv")
+	.row(function(d) { return {key: d.state, value: +d.price}})
+	//.get(function(error, rows) { console.log(rows); })
+
+console.log(dataLookup[d.key])
+*/
+
+/*Inputing Data and drawing the map on the canvas using the defined path variable*/
 
 
 
->>>>>>> e46321f67cfb668a1258f48f877661371c1b3798
+/*var mapper = d3.map()
+
+
+d3.csv("/data/dataSum.csv", function(d){
+	mapper.set(d.state, +d.price)
+	console.log(d)
+
+	dataset = dataSum.map(function(d){return +d["state"], +d["price"]})
+	console.log(dataset)
+	dataSum.forEach(function(d){
+		console.log(d['state'])
+	})
+	data.forEach(function(d){
+		d.state =
+	})
+})
+*/
+
+/* Filling the map with the  color */
+
+
+
+
 
 </script>
 </html>
