--- a/map.html
+++ b/map.html
@@ -31,7 +31,7 @@ function deString(d) {
 function processPrices(d, i) {
 	var state = {
 		state: d.state,
-		price: to_num(d.price)
+		price: deString(d.price)
 	};
 	return state;
 }
@@ -98,8 +98,8 @@ function ready(error,nigeriaStates,priceData) {
 	}
 	var bounds = setBins(max,min);
 
-	var colorArray = ['rgb(189,0,38)','rgb(240,59,32)','rgb(253,141,60)','rgb(254,178,76)','rgb(254,217,118)'];
-	colorArray.reverse();
+	//var colorArray = ['rgb(189,0,38)','rgb(240,59,32)','rgb(253,141,60)','rgb(254,178,76)','rgb(254,217,118)'];
+	var colorArray = ['rgb(254,178,76)','rgb(253,141,60)','rgb(252,78,42)','rgb(227,26,28)','rgb(177,0,38)'];
 	var color = d3.scale.threshold()
 		.domain(bounds)
 		.range(colorArray);
